--- a/MyFlatWPF/packages.config
+++ b/MyFlatWPF/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.4" targetFramework="net472" />
@@ -8,6 +9,8 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net472" />
+  <package id="Prism.Core" version="6.3.0" targetFramework="net472" />
+  <package id="Prism.Wpf" version="6.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Net.Http.Json" version="8.0.0" targetFramework="net472" />
