--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -149,12 +149,15 @@
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Commands\SendOrderFormCommand.cs" />
     <Compile Include="Commands\SwitchViewCommand.cs" />
+    <Compile Include="Data\DataManager.cs" />
+    <Compile Include="Data\Repositories\API\APIRenderingRepository.cs" />
     <Compile Include="HelpMethods\CheckInputFields.cs" />
     <Compile Include="HelpMethods\ObjectModel.cs" />
     <Compile Include="Model\BaseModel.cs" />
     <Compile Include="Model\OrderModel.cs" />
     <Compile Include="Model\PostModel.cs" />
     <Compile Include="Model\ProjectModel.cs" />
+    <Compile Include="Model\TopMenuLinkNameModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\BlogViewModel.cs" />
     <Compile Include="ViewModel\HomeViewModel.cs" />
@@ -322,6 +325,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\google-map-address.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\Repositories\Abstract\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
