--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -152,8 +152,10 @@
     <Compile Include="Data\DataManager.cs" />
     <Compile Include="Data\Repositories\API\APIRenderingRepository.cs" />
     <Compile Include="HelpMethods\CheckInputFields.cs" />
+    <Compile Include="HelpMethods\ImageConverter.cs" />
     <Compile Include="HelpMethods\ObjectModel.cs" />
     <Compile Include="Model\BaseModel.cs" />
+    <Compile Include="Model\HomePagePlaceholderModel.cs" />
     <Compile Include="Model\OrderModel.cs" />
     <Compile Include="Model\PostModel.cs" />
     <Compile Include="Model\ProjectModel.cs" />
