--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Model\PostModel.cs" />
     <Compile Include="Model\ProjectModel.cs" />
     <Compile Include="Model\RandomPhraseModel.cs" />
+    <Compile Include="Model\ServiceModel.cs" />
     <Compile Include="Model\TopMenuLinkNameModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\BlogViewModel.cs" />
