--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -144,8 +144,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Commands\OpenPostDetailsCommand.cs" />
-    <Compile Include="Commands\OpenProjectDetailsCommand.cs" />
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Commands\SendOrderFormCommand.cs" />
     <Compile Include="Commands\SwitchViewCommand.cs" />
@@ -169,7 +167,6 @@
     <Compile Include="ViewModel\ProjectsViewModel.cs" />
     <Compile Include="ViewModel\ServicesViewModel.cs" />
     <Compile Include="ViewModel\StaticMainViewModel.cs" />
-    <Compile Include="ViewModel\ViewMainElements.cs" />
     <Compile Include="View\BlogView.xaml.cs">
       <DependentUpon>BlogView.xaml</DependentUpon>
     </Compile>
@@ -347,6 +344,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Repositories\Abstract\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\ChooseService.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
