--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -148,12 +148,14 @@
     <Compile Include="Commands\SendOrderFormCommand.cs" />
     <Compile Include="Commands\SwitchViewCommand.cs" />
     <Compile Include="Data\DataManager.cs" />
+    <Compile Include="Data\Repositories\API\APIAccountRepository.cs" />
     <Compile Include="Data\Repositories\API\APIRenderingRepository.cs" />
     <Compile Include="HelpMethods\CheckInputFields.cs" />
     <Compile Include="HelpMethods\ImageConverter.cs" />
     <Compile Include="HelpMethods\ObjectModel.cs" />
     <Compile Include="Model\BaseModel.cs" />
     <Compile Include="Model\HomePagePlaceholderModel.cs" />
+    <Compile Include="Model\LoginModel.cs" />
     <Compile Include="Model\OrderModel.cs" />
     <Compile Include="Model\PostModel.cs" />
     <Compile Include="Model\ProjectModel.cs" />
@@ -163,6 +165,7 @@
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\BlogViewModel.cs" />
     <Compile Include="ViewModel\HomeViewModel.cs" />
+    <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="ViewModel\ProjectsViewModel.cs" />
     <Compile Include="ViewModel\ServicesViewModel.cs" />
