--- a/MyFlatWPF/MyFlatWPF.csproj
+++ b/MyFlatWPF/MyFlatWPF.csproj
@@ -146,6 +146,7 @@
     </ApplicationDefinition>
     <Compile Include="Commands\LogoutCommand.cs" />
     <Compile Include="Commands\ManagementCommand\ChangeNameLinkCommand.cs" />
+    <Compile Include="Commands\ManagementCommand\ChangeRandomPhraseCommand.cs" />
     <Compile Include="Commands\ManagementCommand\ChooseMainImageCommand.cs" />
     <Compile Include="Commands\ManagementCommand\SaveMainImageCommand.cs" />
     <Compile Include="Commands\ManagementCommand\ShowOrdersByPeriodCommand.cs" />
@@ -158,7 +159,6 @@
     <Compile Include="Data\Repositories\API\APIAccountRepository.cs" />
     <Compile Include="Data\Repositories\API\APIManagementRepository.cs" />
     <Compile Include="Data\Repositories\API\APIRenderingRepository.cs" />
-    <Compile Include="HelpMethods\ChangeNameLinkParameters.cs" />
     <Compile Include="HelpMethods\CheckInputFields.cs" />
     <Compile Include="HelpMethods\ImageConverter.cs" />
     <Compile Include="HelpMethods\ObjectModel.cs" />
